Edited fonts + sizes

--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
-    <head>
+    <head lang="en-US">
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <h1>i9nn</h1>
+        <h1 style="color: cadetblue";>i9nn</h1>
     </body>
 </html>
