Adjusted text of the main header

--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <h1 style="color: cadetblue";>i9nn</h1>
+        <h1 style="color: cadetblue; font-family:verdana; font-size:130%";><i>i9nn</i></h1>
     </body>
 </html>
