--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <h1 style="color: cadetblue; font-family:verdana; font-size:130%";><i>i9nn</i></h1>
+        <!-- main heading -->
+        <h1 style="color:#659a9f; font-family:Helvetica; font-size:150%";><i>i9nn</i></h1>
     </body>
 </html>
