--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head lang="en-US">
+        <title>i9nn</title>
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
