Altered some meta tags

--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <!-- main heading -->
-        <h1 style="color:#659a9f; font-family:Helvetica; font-size:150%";><i>i9nn</i></h1>
+        <h1 style="color:#659a9f; font-family:Helvetica; font-size:320%";><i>i9nn</i></h1>
     </body>
 </html>
