Added small description + edited border

--- a/index.html
+++ b/index.html
@@ -8,5 +8,14 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <!-- main heading -->
         <h1 class="main_title"><i>i9nn</i></h1>
+
+        <p style="font-size: 2vmin"></p>
+            <span style="color: #659a9f">
+                i9nn
+            </span> 
+            is a programmer from the United States of America.
+                <br>
+            He is very good and you are very bad.
+        </p>
     </body>
 </html>
