Edited text size for paragraph

--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <body>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <!-- main heading -->
-        <h1 class="main_title"><i>i9nn</i></h1>
+        <h1 class="main_title">
+            <i>i9nn</i>
+        </h1>
 
         <p>
             <span style="color: #659a9f">
@@ -16,6 +18,10 @@
             is a programmer from the United States of America.
                 <br>
             He is very good and you are very bad.
+        </p>
+
+        <p>
+            
         </p>
     </body>
 </html>
