--- a/index.html
+++ b/index.html
@@ -15,11 +15,19 @@
         <!-- top description -->
         <p>
             <span style="color: #659a9f">
-                <i>i9nn</i>
+                <i><b>i9nn</b></i>
             </span> 
-            is a programmer from the United States of America.
-                <br>
-            He is very good and you are very bad.
+            is a programmer from the united states of america. he is very good and you are very bad.
+        </p>
+
+        <hr>
+
+        <!-- languages images -->
+        <p>
+            here are ian's favorite
+            <span style="color: #659a9f">
+                <i><b> languages:</b></i>
+            </span>
         </p>
     </body>
 </html>
