--- a/index.html
+++ b/index.html
@@ -8,9 +8,11 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
         <!-- main heading -->
-        <h1 class="main_title">
-            <i>i9nn</i>
-        </h1>
+        <div style="background-color: rgb(193, 253, 255)">
+            <h1 class="main_title">
+                <i>i9nn</i>
+            </h1>
+        </div>
 
         <!-- top description -->
         <p>
