Altering some fonts and some backgrounds

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
         <!-- main heading -->
-        <div style="background-color: rgb(193, 253, 255)">
+        <div style="background-color: rgba(193, 253, 255, 0.459); border-radius: 2vmin">
             <h1 class="main_title">
                 <i>i9nn</i>
             </h1>
