--- a/index.html
+++ b/index.html
@@ -8,11 +8,12 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
         <!-- main heading -->
-        <div style="background: rgb(101,154,159,0.3); background: linear-gradient(90deg, rgba(101,154,159,0.2) 0%, rgba(151,194,199,0.2) 100%); border-radius: 2vmin">
+        <div style="background: rgb(101,154,159,0.3); background: linear-gradient(90deg, rgba(101,154,159,0.2) 0%, rgba(151,194,199,0.2) 100%)">
             <h1 class="main_title">
                 <i>i9nn</i>
             </h1>
         </div>
+
 
         <!-- top description -->
         <p style="font-size: 5vmin";>
