--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
         <!-- main heading -->
-        <div style="background: rgba(101, 154, 159, 0.3); background: linear-gradient(90deg, rgba(101, 154, 159, 0.2) 0%, rgba(151, 194, 199, 0.2) 100%)">
+        <div style=" height: 20%; background: rgba(101, 154, 159, 0.3); background: linear-gradient(90deg, rgba(101, 154, 159, 0.2) 0%, rgba(151, 194, 199, 0.2) 100%)">
             <h1 class="main_title">
                 <i>i9nn</i>
             </h1>
