--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
                 <i>i9nn</i>
             </h1>
 
-            <marquee behavior="scroll" direction="left">
-                <i>i9nn is not my real name : it is ian : it is not i9nn : i9nn is not my real name : it is ian : it is not i9nn : i9nn is not my real name : it is ian : it is not i9nn : i9nn is not my real name : it is ian : it is not i9nn : </i>
-            </marquee>
+            <p>
+                <i>i9nn is not my real name : it is ian : it is not i9nn</i>
+            </p>
         </div>
 
         <!--
