Added some small alternative affects to <div>

--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
         <!-- main heading -->
-        <div style="height: 20%; background: linear-gradient(90deg, rgba(101, 154, 159, 0.4) 0%, rgba(151, 194, 199, 0.4) 100%)">
+        <div style="width: 100%; height: 100%; background: linear-gradient(90deg, rgba(101, 154, 159, 0.4) 0%, rgba(151, 194, 199, 0.4) 100%)">
             <h1 class="main_title">
-                <i>i9nn</i>
+                <i>& i9nn</i>
             </h1>
 
             <p>
-                <i>i9nn is not my real name : it is ian : it is not i9nn</i>
+                <i>i9nn is not my real name : it is ian : it is not i9nn</i><br>
             </p>
         </div>
 
