hr line added to div

--- a/index.html
+++ b/index.html
@@ -15,8 +15,9 @@
             </h1>
 
             <p>
-                <i>i9nn is not my real name : it is ian : it is not i9nn</i><br>
+                <i>i9nn is not my real name : it is ian : it is not i9nn</i>
             </p>
+            <hr>
         </div>
 
         <!--
