--- a/index.html
+++ b/index.html
@@ -17,6 +17,10 @@
             <p>
                 <i>i9nn is not my real name : it is ian : it is not i9nn</i>
             </p>
+
+            <p>
+                <i>here are my socials : <a href="https://github.com/i9nn">github</a> : that would be it i see</i>
+            </p>
             <hr>
         </div>
 
