Some edits to links + hover effects

--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
             </h1>
 
             <p>
-                <i>i9nn is not my real name : it is ian : it is not i9nn</i>
+                <i>i9nn is not my real name : it is ian : it is not i9nn</i> <br>
+                <i>here are my socials : <a href="https://github.com/i9nn">github</a> : that would be it i see</i>
             </p>
 
             <p>
-                <i>here are my socials : <a href="https://github.com/i9nn">github</a> : that would be it i see</i>
+                
             </p>
-            <hr>
         </div>
 
         <!--
