--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
         <!-- main heading -->
-        <div style="height: 10vmin; white-space: nowrap; background: linear-gradient(90deg, rgba(101, 154, 159, 0.4) 0%, rgba(151, 194, 199, 0.4) 100%)">
+        <div style="white-space: nowrap; background: linear-gradient(90deg, rgba(101, 154, 159, 0.4) 0%, rgba(151, 194, 199, 0.4) 100%)">
             <h1 class="main_title">
                 <i>& i9nn & i9nn & i9nn & i9nn & i9nn & i9nn & i9nn</i>
             </h1>
