--- a/index.html
+++ b/index.html
@@ -9,13 +9,12 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
         <!-- main heading -->
-        <div style="white-space: nowrap; background: linear-gradient(90deg, rgba(101, 154, 159, 0.4) 0%, rgba(151, 194, 199, 0.4) 100%)">
+        <div style="height: 80vh; white-space: nowrap; background: linear-gradient(90deg, rgba(101, 154, 159, 0.4) 0%, rgba(151, 194, 199, 0.4) 100%)">
             <h1 class="main_title">
                 <i>& i9nn & i9nn & i9nn & i9nn & i9nn & i9nn & i9nn</i>
             </h1>
 
-            <p>
-                <i>i9nn is not my real name : it is ian : it is not i9nn</i> <br>
+
                 <i>here are my socials : <a href="https://github.com/i9nn">github</a> : that would be it i see</i>
             </p>
 
