--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
             </h1>
 
             <p>
+                <i>aspiring full stack + game developer!</i>  
+            </p>
+
+            <p>
                 <br><br>
             </p>
         </div>
