Small adjustments to <p>

--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
         <!-- main heading -->
-        <div style="height: 80vh; white-space: nowrap; background: linear-gradient(15deg, rgb(86, 119, 122) 0%, rgb(151, 194, 199) 100%)">
+        <div style="height: 80vh; white-space: nowrap; background: linear-gradient(15deg, rgba(101, 154, 159, 0.7) 0%, rgb(151, 194, 199, 0.7) 100%)">
             <h1 class="main_title">
                 <i>& i9nn</i>
-
-                <p>
-                    <i>aspiring full stack + game developer!</i>  
-                </p>
             </h1>
+
+            <p>
+                <i>aspiring full stack + game developer!</i>  
+            </p>
 
             <p>
                 <br><br>
