Wrapping new text elements in div in an attempt to keep them structured properly

--- a/index.html
+++ b/index.html
@@ -10,13 +10,15 @@
 
         <!-- main heading -->
         <div style="height: 80vh; white-space: nowrap; background: linear-gradient(15deg, rgba(101, 154, 159, 0.7) 0%, rgb(151, 194, 199, 0.7) 100%)">
-            <h1 class="main_title">
-                <i>& i9nn</i>
-            </h1>
+            <div>
+                <h1 class="main_title">
+                    <i>& i9nn</i>
+                </h1>
 
-            <p>
-                <i>aspiring full stack + game developer!</i>  
-            </p>
+                <p>
+                    <i>aspiring full stack + game developer!</i>  
+                </p>
+            </div>
 
             <p>
                 <br><br>
