--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
         <!-- main heading -->
         <div style="height: 80vh; white-space: nowrap; background: linear-gradient(15deg, rgba(101, 154, 159, 0.7) 0%, rgb(151, 194, 199, 0.7) 100%)">
-            <div>
+            <div class="centered_box">
                 <h1 class="main_title">
                     <i>& i9nn</i>
                 </h1>
