--- a/index.html
+++ b/index.html
@@ -25,14 +25,9 @@
             </p>
         </div>
 
-        <!-- small post-header description -->
+        <!-- small scroll arrow -->
         <div>
-            <p><br></p>
-
-            <h1 class="lower_heading">
-                <i>↓</i>
-            </h1>
-
+            <h1 class="lower_heading">↓</h1>
             <p><br></p>
         </div>
     </body>
