--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
         <!-- small scroll arrow -->
         <div>
-            <h1 class="lower_heading">↓</h1>
+            <h1 class="lower_heading">[ ↓ ] </h1>
             <p><br></p>
         </div>
     </body>
