--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                     <i>& i9nn</i>
                 </h1>
 
-                <p style="font-size: 6vw;"">
+                <p style="font-size: 1vw;">
                     <i>aspiring full stack + game developer + sucker for minimalism</i>  
                 </p>
             </div>
