Font sizing fixes

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                     <i>& i9nn</i>
                 </h1>
 
-                <p style="font-size: 1vw;">
+                <p style="font-size: 1.6vw">
                     <i>aspiring full stack + game developer + sucker for minimalism</i>  
                 </p>
             </div>
@@ -27,7 +27,7 @@
 
         <!-- small scroll arrow -->
         <div>
-            <h1 style="font-size: 7vw" class="lower_heading">[ ↓ ]</h1>
+            <h1 style="font-size: 4vw" class="lower_heading">[ ↓ ]</h1>
             <p><br></p>
         </div>
     </body>
