Added github link

--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
 
                 <p style="font-size: 1.7vw">
                     <i>aspiring full stack + game developer + sucker for minimalism</i>  
+                        <br>
+                    <a href="https://github.com/i9nn">check out my github!</a>
                 </p>
             </div>
 
