--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <div style="height: 80vh; white-space: nowrap; background: linear-gradient(15deg, rgba(101, 154, 159, 0.7) 0%, rgb(151, 194, 199, 0.7) 100%)">
             <div class="centered_box">
                 <h1 style="text-align: center" class="main_title shrink-on-hover">
-                    <i>i9nn</i>
+                    <i>&amp; i9nn</i>
                 </h1>
 
                 <p style="font-size: 1.7vw">
