--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
         <!-- main heading -->
         <div style="height: 80vh; white-space: nowrap; background: linear-gradient(15deg, rgba(101, 154, 159, 0.7) 0%, rgb(151, 194, 199, 0.7) 100%)">
             <div class="centered_box">
-                <h1 style="text-align: center" class="main_title shrink-on-hover">
+                <h1 style="text-align: center" class="main_title shrink_hover">
                     <i>&amp; i9nn</i>
                 </h1>
 
                 <p style="font-size: 1.7vw">
                     <i>aspiring full stack + game developer + sucker for minimalism</i>  
                         <br>
-                    <a href="https://github.com/i9nn">check out my github!</a>
+                    <a href="https://github.com/i9nn" class="shrink_hover">check out my github!</a>
                 </p>
             </div>
 
