--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
         <!-- main heading -->
-        <div style="height: 80vh; white-space: nowrap; background: linear-gradient(15deg, rgba(101, 154, 159, 0.7) 0%, rgb(151, 194, 199, 0.7) 100%)">
+        <div style="height: 80vh; white-space: nowrap; background: linear-gradient(0deg, rgba(101, 154, 159, 0.5) 0%, rgb(151, 194, 199, 0.3) 100%)">
             <div class="centered_box">
                 <h1 style="text-align: center" class="main_title shrink_hover">
                     <i>&amp; i9nn</i>
                 </h1>
 
-                <p style="font-size: 1.7vw">
-                    <i>aspiring full stack + game developer + sucker for minimalism</i>  
+                <p style="font-size: 2vh">
+                    <i>aspiring full stack + game developer + sucker for minimalism</i>
                         <br>
                     <a href="https://github.com/i9nn" class="shrink_hover">check out my github!</a>
                 </p>
@@ -26,11 +26,15 @@
                 <br><br>
             </p>
         </div>
-
+        
         <!-- small scroll arrow -->
-        <div>
-            <h1 style="font-size: 5vw" class="lower_heading">↓</h1>
-            <p><br></p>
+        <div style="height: 20vh; background: linear-gradient(180deg, rgba(101, 154, 159, 0.5) 0%, rgb(255, 255, 255, 1) 100%)">
+            <div class="centered_block">
+                <br>
+                <h1 style="font-size: 10vh; color: transparent; -webkit-text-stroke: 2px #000000;">
+                    ↓
+                </h1>
+            </div>
         </div>
     </body>
 </html>
