Commented out css.svg

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             <img class="shrink_hover" src="assets/code_logos/java.svg">
             <img class="shrink_hover" src="assets/code_logos/html.svg">
             <img class="shrink_hover" src="assets/code_logos/python.svg">
-            <img class="shrink_hover" src="assets/code_logos/css.svg">
+            <!--<img class="shrink_hover" src="assets/code_logos/css.svg">-->
             <img class="shrink_hover" src="assets/code_logos/javascript.svg">
             
             <p>
