Adjustment of font size according to width

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
         <br><br>
     
         <div style="height: 30vh; white-space: nowrap; background: linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, rgb(151, 194, 199, 0.6) 100%)">
-            <h1 class="main_title shrink_hover">
+            <h1 style="font-size: 9vw" class="main_title shrink_hover">
                 <i>bye!</i>
             </h1>
             
