--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <!-- main heading -->
         <div style="height: 80vh; white-space: nowrap; background: linear-gradient(0deg, rgba(101, 154, 159, 0.5) 0%, rgb(151, 194, 199, 0.3) 100%)">
             <div class="centered_box">
-                <h1 style="text-align: center" class="main_title shrink_hover">
+                <h1 style="text-align: center; font-size: 13vw" class="main_title shrink_hover">
                     <i>&amp; i9nn</i>
                 </h1>
 
