Small fixes to text

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
             </a>
 
             <p style="font-size: 1.9vh">
-                <i>Ranked by how often I use them and how cool I think they are!</i>
+                <i>Ranked by how often I use them.</i>
             </p>
         </div>
         
