Fixed github icon not rendering

--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
     <head lang="en-US">
         <title>i9nn</title>
         <link rel="stylesheet" href="style.css">
+
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Rubik+Mono+One&display=swap" rel="stylesheet">
     </head>
 
     <body>
@@ -18,7 +22,7 @@
                 <p style="font-size: 1.9vh">
                     <i>aspiring full stack + game developer + sucker for minimalism</i>
                         <br>
-                    <img src="assets/editor_logos/github.svg">
+                    <img src="assets/logos/editor_logos/github.svg">
                     <a href="https://github.com/i9nn" class="shrink_hover">check out my github!</a>
                 </p>
             </div>
