Undid old changes

--- a/new_website/index.html
+++ b/new_website/index.html
@@ -11,20 +11,20 @@
 
     <body>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-            <br>
-        <div class="container">
+        <div style="background-image: url(assets/blur_code.png)" class="container">
+                <br>
             <img style="height: 25vw;" src="assets/ian_logo.svg">
-
             <div>
                 <i class="header_text center_text">
                     i9nn
                 </i>
 
-                <p class="lower_header_text center_text">
+                <p class="lower_header_text lower_text">
                     developer
                 </p>
 
             </div>
+                <br>
         </div>
     </body>
 </html>
