Embedded Spotify playlist

--- a/index.html
+++ b/index.html
@@ -155,6 +155,8 @@
                 <i>check out these albums on spotify. the last one is my personal playlist!</i>
             </p>
         </div>
+
+        <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/2ENTGdThttYwmw66AZHMo4?utm_source=generator&theme=0" width="100%" height="380" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
         
         <br><br>
     
