Added comments for new divs

--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
             </div>
         </div>
 
+        <!-- description -->
         <div style="height: 20vh">
             <p style="font-size: 2.5vh">
                 welcome!!!
@@ -119,7 +120,7 @@
             </p>
         </div>
 
-        <!-- editor containers + logos -->
+        <!-- albums -->
         <div style="height: 14vh">
             <h1 class="lower_heading grow_hover">
                 <i>albums:</i>
@@ -160,6 +161,7 @@
          
         <br> <br>
     
+        <!-- ending -->
         <div style="height: 30vh; white-space: nowrap; background: linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, rgb(151, 194, 199, 0.6) 100%)">
             <h1 style="font-size: 10vw" class="main_title grow_hover">
                 <i>bye!</i>
@@ -169,5 +171,17 @@
                 <i>thank you for checking out my website!</i>
             </p>
         </div>
+
+        <!--
+
+            Hey!!
+
+            Thanks for checking out my source code! I worked
+            really hard on this website and it was a fun project
+            to work on as I learned more about HTML + CSS.
+
+            You can always message me on GitHub. 
+
+        -->
     </body>
 </html>
