--- a/index.html
+++ b/index.html
@@ -15,10 +15,15 @@ oh, and neck & wrist don't lie!!
 <!DOCTYPE html>
 <html>
     <head lang="en-US">
+        <!-- bootstrap -->
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+
         <!-- website cosmetics -->
         <title>& i9nn</title>
         <link rel="stylesheet" href="style.css">
-        <link rel="icon" type="image/x-icon" href="assets/logos/editor-logos/icon.png">
+        <link rel="icon" type="image/x-icon" href="assets/logos/framework-logos/icon.png">
 
         <!-- preloaded Monserrat fonts -->
         <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -82,7 +87,7 @@ oh, and neck & wrist don't lie!!
                 </p>
     
                 <!-- programming caption -->
-                <p  style="font-size: 2.6vh">
+                <p  style="font-size: 2.2vh">
                     my name is <b>Ian</b>, and I am a high-school 
                     <br>student from both the east and west coast.
                     
@@ -134,12 +139,12 @@ oh, and neck & wrist don't lie!!
 
         </div>
 
-        <!-- editors describer -->
+        <!-- frameworks describer -->
         <div style="height: 14vh">
 
             <!-- title -->
             <h1 class="lower-heading grow-hover">
-                <i>editors:</i>
+                <i>frameworks:</i>
             </h1>
 
             <!-- caption -->
@@ -152,10 +157,12 @@ oh, and neck & wrist don't lie!!
         <div style="text-align: center">
 
             <!-- logo box -->
-                <!-- github --> <a href="https://github.com"><img class="grow-hover rot-back-slight logo" src="assets/logos/editor-logos/github.svg"></a>
-                <!-- vscode --> <a href="https://code.visualstudio.com/"><img class="grow-hover rot-front logo" src="assets/logos/editor-logos/vscode.svg"></a>
-                <!-- discord --> <a href="https://discord.com/"><img class="grow-hover rot-back-slight logo" src="assets/logos/editor-logos/discord.svg"></a>
-                <!-- git --> <a href="https://git-scm.com/"><img class="grow-hover rot-front logo" src="assets/logos/editor-logos/git.svg"></a>
+                <!-- github --> <a href="https://github.com"><img class="grow-hover rot-back-slight logo" src="assets/logos/framework-logos/github.svg"></a>
+                <!-- vscode --> <a href="https://code.visualstudio.com/"><img class="grow-hover rot-front logo" src="assets/logos/framework-logos/vscode.svg"></a>
+                <!-- discord --> <a href="https://discord.com/"><img class="grow-hover rot-back-slight logo" src="assets/logos/framework-logos/discord.svg"></a>
+                    <br>
+                <!-- git --> <a href="https://git-scm.com/"><img class="grow-hover rot-front logo" src="assets/logos/framework-logos/git.svg"></a>
+                <!-- bootstrap --> <a href="https://getbootstrap.com/"><img class="grow-hover rot-back-slight logo" src="assets/logos/framework-logos/bootstrap.svg"></a>
 
             <!-- caption -->
             <p style="font-size: 1.9vh">
