--- a/index.html
+++ b/index.html
@@ -8,21 +8,20 @@ to work on as I learned more about HTML + CSS.
 
 You can always message me on GitHub. 
 
-oh, and neck & wrist don't lie!!
-
 -->
 
 <!DOCTYPE html>
 <html>
     <head lang="en-US">
+
         <!-- bootstrap -->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
 
         <!-- website cosmetics -->
         <title>& i9nn</title>
-        <link rel="stylesheet" href="style.css">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" href="stylesheets/style-900px.css">
         <link rel="icon" type="image/x-icon" href="assets/logos/framework-logos/icon.png">
 
         <!-- preloaded Monserrat fonts -->
@@ -32,9 +31,11 @@ oh, and neck & wrist don't lie!!
 
         <!-- animation sourcing -->
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
+
     </head>
 
     <body>
+
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
         <!-- main heading -->
@@ -64,15 +65,14 @@ oh, and neck & wrist don't lie!!
         
         <!-- transition block -->
         <div class="transition-section">
-
-            <!-- arrow -->
             <div class="centered-block">
-                <br>
-                <h1 class="animate__animated animate__fadeIn animate__delay-1s" style="font-family: Helvetica; font-size: 8vh; color: transparent; -webkit-text-stroke: 2px #171717;">
+
+                <!-- arrow -->
+                <br><h1 class="animate__animated animate__fadeIn animate__delay-1s" style="font-family: Helvetica; font-size: 8vh; color: transparent; -webkit-text-stroke: 2px #171717;">
                     ↓
                 </h1>
-            </div>
 
+            </div>
         </div>
 
         <div class="spacer-bar"></div>
@@ -80,6 +80,24 @@ oh, and neck & wrist don't lie!!
         <!-- text bar -->
         <div class="text-section">
             <div class="text-section-wrapper centered-box">
+
+                <!-- waving box animation -->
+                <script>
+                    const observer = new IntersectionObserver(entries => {
+                        entries.forEach(entry => {
+                            const waving = entry.target.querySelector('.waving-box')
+                            
+                            if (entry.isIntersecting) {
+                                waving.classList.add("animate__rubberBand");
+                                return; 
+                            }
+
+                            waving.classList.remove('animate__rubberBand');
+                        });
+                    });
+
+                    observer.observe(document.querySelector('.text-section-wrapper'));
+                </script>
 
                 <!-- caption title -->
                 <p class="waving-box animate__animated" style="font-size: 4.2vh; color: transparent; -webkit-text-stroke: 1px #4b4e6d;">
@@ -124,11 +142,11 @@ oh, and neck & wrist don't lie!!
             <!-- logo box -->
                 <!-- lua --> <a href="https://www.lua.org"><img class="grow-hover rot-back-slight logo" src="assets/logos/code-logos/lua.svg"></a>
                 <!-- java --> <a href="https://www.java.com"><img class="grow-hover rot-front logo" src="assets/logos/code-logos/java.svg"></a>
-                <!-- html --> <a href="https://en.wikipedia.org/wiki/HTML"><img class="grow-hover rot-back-slight logo" src="assets/logos/code-logos/html.svg"></a>
+                <!-- python --> <a href="https://www.python.org"><img class="grow-hover rot-front-slight logo" src="assets/logos/code-logos/python.svg"></a>
                 <!-- javascript --> <a href="https://www.javascript.com"><img class="grow-hover rot-front logo" src="assets/logos/code-logos/js.svg"></a>
                     <br>
+                <!-- html --> <a href="https://en.wikipedia.org/wiki/HTML"><img class="grow-hover rot-back-slight logo" src="assets/logos/code-logos/html.svg"></a>
                 <!-- css --> <a href="https://en.wikipedia.org/wiki/CSS"><img class="grow-hover rot-back logo" src="assets/logos/code-logos/css.svg"></a>
-                <!-- python --> <a href="https://www.python.org"><img class="grow-hover rot-front-slight logo" src="assets/logos/code-logos/python.svg"></a>
                 <!-- c++ --> <a href="https://www.cplusplus.com/"><img class="grow-hover rot-back-slight logo" src="assets/logos/code-logos/cpp.svg"></a>
                 <!-- typescript --> <a href="https://www.typescriptlang.org/"><img class="grow-hover rot-front logo" src="assets/logos/code-logos/ts.svg"></a>
 
@@ -190,33 +208,10 @@ oh, and neck & wrist don't lie!!
 
         <div style="text-align: center; width: 100%">
 
-            <!-- multitude -->
-            <span>
-                <a href="https://open.spotify.com/album/5JY3b9cELQsoG7D5TJMOgw?si=zwLzSuRWSauRFwpQCTcE1w">
-                    <img style="height: 15vw; width: 15vw" class="shrink-hover logo" src="assets/albums/multitude.png">
-                </a>
-            </span>
-
-            <!-- the life of pablo -->
-            <span>
-                <a href="https://open.spotify.com/album/7gsWAHLeT0w7es6FofOXk1?si=HZmLUzHyT5KSmrV4SmkMTg">
-                    <img style="height: 15vw; width: 15vw" class="shrink-hover" src="assets/albums/thelifeofpablo.png">
-                </a>
-            </span>
-
-            <!-- the powers that b -->
-            <span>
-                <a href="https://open.spotify.com/album/5Y04ylQjDWsawOUJXzY4YO?si=24cb4b984b8347f1">
-                    <img style="height: 15vw; width: 15vw" class="shrink-hover" src="assets/albums/thepowersthatbe.png">
-                </a>
-            </span>
-
-            <!-- personal playlist -->
-            <span>
-                <a href="https://open.spotify.com/playlist/2ENTGdThttYwmw66AZHMo4?si=aaf6af2040fa4af5">
-                    <img style="height: 15vw; width: 15vw" class="shrink-hover" src="assets/albums/iansfaves.png">
-                </a>
-            </span>
+            <!-- multitude --> <span><a href="https://open.spotify.com/album/5JY3b9cELQsoG7D5TJMOgw?si=zwLzSuRWSauRFwpQCTcE1w"><img style="height: 15vw; width: 15vw" class="shrink-hover logo" src="assets/albums/multitude.png"></a></span>
+            <!-- the life of pablo --> <span><a href="https://open.spotify.com/album/7gsWAHLeT0w7es6FofOXk1?si=HZmLUzHyT5KSmrV4SmkMTg"><img style="height: 15vw; width: 15vw" class="shrink-hover" src="assets/albums/thelifeofpablo.png"></a></span>
+            <!-- the powers that b --> <span><a href="https://open.spotify.com/album/5Y04ylQjDWsawOUJXzY4YO?si=24cb4b984b8347f1"><img style="height: 15vw; width: 15vw" class="shrink-hover" src="assets/albums/thepowersthatbe.png"></a></span>
+            <!-- personal playlist --> <span><a href="https://open.spotify.com/playlist/2ENTGdThttYwmw66AZHMo4?si=aaf6af2040fa4af5"><img style="height: 15vw; width: 15vw" class="shrink-hover" src="assets/albums/iansfaves.png"></a></span>
 
             <!-- caption -->
             <p style="font-size: 1.9vh">
@@ -245,5 +240,6 @@ oh, and neck & wrist don't lie!!
         </div>
 
         <script src="effects.js"></script>
+
     </body>
 </html>
