--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ You can always message me on GitHub.
 
     </head>
 
-    <body class="scroll-stopper">
+    <body>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
         <!-- main heading -->
