--- a/index.html
+++ b/index.html
@@ -12,84 +12,55 @@ You can always message me on GitHub.
 
 <!DOCTYPE html>
 <html>
+    <head lang="en-US">
 
-<head lang="en-US">
+        <!-- bootstrap -->
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+            integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
 
-    <!-- bootstrap -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
+        <!-- website cosmetics -->
+        <title>i9nn</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" href="new_style.css">
+        <link rel="icon" type="image/x-icon" href="assets/logos/framework-logos/icon.png">
 
-    <!-- website cosmetics -->
-    <title>i9nn</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="new_style.css">
-    <link rel="icon" type="image/x-icon" href="assets/logos/framework-logos/icon.png">
+        <!-- preloaded Monserrat fonts -->
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;1,600&display=swap">
 
-    <!-- preloaded Monserrat fonts -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;1,600&display=swap">
+        <!-- animation sourcing -->
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
 
-    <!-- animation sourcing -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+    </head>
 
-</head>
+    <body>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-<body>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-    <div class="topbox">
-        <div>
-            <p class="lcorner-icon">
-                <b>{ i } <span style="color: var(--lightblue)">────────────────</span></b>
-            </p>
-        </div>
-
-        <div class="centered">
-            <h1><b>
-                { i9nn }
-            </b></h1>
-
-            <h2><b>
-                full stack + game dev.
-            </b></h2>
-
-            <a href="https://github.com/i9nn">
-                check out my github!
-            </a>
-        </div>
-    </div>
-
-    <p>
-        poop
-    </p>
-
-    <!-- main heading -->
-    <!--
-        <div class="first-section animate__animated animate__slideInDown">
-            <div class="centered-box">
-
-
-                <h1 class="main-title animate__animated animate__flipInX animate__delay-1s">
-                    <i>
-                        <p class="grow-hover">&amp; i9nn</p>
-                    </i>
-                </h1>
-
-                <p class="main-title-caption animate__animated animate__zoomIn" style="color: #fff">
-                    <i>
-                        full stack + game developer; fan of computers; jerk
-                    </i>
-                        <br>
-                    <a href="https://github.com/i9nn">
-                        check out my github!
+        <div class="topbox">
+            <div>
+                <p class="lcorner-icon">
+                    <b>{ i } <span style="color: var(--lightblue)">────────────────</span></b> 
+                    <a href="https://discordapp.com/users/614954208139149319/">
+                        <img src="assets/logos/framework-logos/discord.svg">
                     </a>
                 </p>
+            </div>
 
+            <div class="centered">
+                <h1><b>
+                    { i9nn }
+                </b></h1>
+
+                <h2><b>
+                    full stack + game dev.
+                </b></h2>
+
+                <a href="https://github.com/i9nn">
+                    check out my github!
+                </a>
             </div>
         </div>
-        -->
-</body>
-
+    </body>
 </html>
