Added emoji class to smiley face

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@ You can always message me on GitHub.
                         observer.observe(document.querySelector('.smile-upper'));
                     </script>
 
-                    <h1> <div class="animate__animated smile"><i class="bi bi-emoji-smile"></i></div> <i>welcome!</i></h1>
+                    <h1> <div class="animate__animated smile"><i class="bi bi-emoji-smile emoji"></i></div> <i>welcome!</i></h1>
                     <h2>my name is Ian. i am a web <br>& game developer located in NV.</h2>
                         <br>
                     <h3>i have been developing for around <i>five years</i> <br> in around <i>six different languages.</i></h3>
