Added arrow icon in topbox

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ You can always message me on GitHub.
         <title>i9nn</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="style.css">
-        <link rel="icon" type="image/x-icon" href="assets/logos/framework-logos/icon.png">
+        <link rel="icon" type="image/x-icon" href="assets/icon.png">
 
         <!-- preloaded Monserrat fonts -->
         <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -44,12 +44,16 @@ You can always message me on GitHub.
                     <p class="tcorner-icon">
                         <b>{ i } <span style="color: var(--yellow)"><i>v3</i></span> <span style="color: var(--lightblue)">────────────────</span></b> 
                         <a href="https://discordapp.com/users/614954208139149319/">
-                            <img src="assets/logos/framework-logos/discord.svg">
+                            <img src="assets/logos/discord.svg">
                         </a>
                     </p>
 
                     <p class="bcorner-icon">
                         <b>made with <span style="color: #f4d35e3b;">❤</span> :]</b>
+                    </p>
+
+                    <p class="arrow animate__animated animate__fadeInDown animate__delay-1s">
+                        ↓
                     </p>
                 </div>
 
