Added drop shadows to svg icons

--- a/index.html
+++ b/index.html
@@ -91,13 +91,14 @@ You can always message me on GitHub.
                     <h1> <div class="animate__animated smile"><i class="bi bi-emoji-smile emoji"></i></div> <i>welcome!</i></h1>
                     <h2>my name is Ian. i am a web <br>& game developer located in NV.</h2>
                         <br>
-                    <h3>i have been developing for around <i>five years</i> <br> in around <i>six different languages.</i></h3>
+                    <h3>i have been developing for around <i>five years</i> <br> in around <i>seven different languages.</i></h3>
 
                     <div>
                         <a href="https://www.lua.org/"><img src="assets/logos/lua.svg"></a>
                         <a href="https://www.java.com/"><img src="assets/logos/java.svg"></a>
                         <a href="https://en.wikipedia.org/wiki/HTML"><img src="assets/logos/html.svg"></a>
                         <a href="https://en.wikipedia.org/wiki/CSS"><img src="assets/logos/css.svg"></a>
+                        <a href="https://www.kotlinlang.org"><img src="assets/logos/kotlin.svg"></a>
                         <a href="https://www.python.org/"><img src="assets/logos/python.svg"></a>
                         <a href="https://www.javascript.com/"><img src="assets/logos/js.svg"></a>
                     </div>
