Reversion of old files

--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@ You can always message me on GitHub.
         <!-- website cosmetics -->
         <title>i9nn</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="new_style.css">
-        <link rel="icon" type="image/x-icon" href="assets/logos/framework-logos/icon.png">
+        <link rel="stylesheet" href="style.css">
+        <link rel="icon" type="image/x-icon" href="assets/icon.png">
 
         <!-- preloaded Monserrat fonts -->
         <link rel="preconnect" href="https://fonts.googleapis.com">
