Added recursive JS code to add code elements

--- a/index.html
+++ b/index.html
@@ -14,16 +14,14 @@ You can always message me on GitHub.
 <html>
     <head lang="en-US">
 
-        <!-- bootstrap -->
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-            integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
-
         <!-- website cosmetics -->
         <title>i9nn</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="style.css">
         <link rel="icon" type="image/x-icon" href="assets/icon.png">
+
+        <!-- bootstrap icons -->
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
 
         <!-- preloaded Monserrat fonts -->
         <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -40,36 +38,39 @@ You can always message me on GitHub.
 
         <div class="topbox">
             <div class="bg">
-                <div>
-                    <p class="tcorner-icon">
-                        <b>{ i } <span style="color: var(--yellow)"><i>v3</i></span> <span style="color: var(--lightblue)">────────────────</span></b> 
-                        <a href="https://discordapp.com/users/614954208139149319/">
-                            <img src="assets/logos/discord.svg">
-                        </a>
-                    </p>
 
-                    <p class="bcorner-icon">
-                        <b>made with <span style="color: #f4d35e3b;">❤</span> :]</b>
-                    </p>
+                <header>
+                    <div>
+                        <p class="tcorner-icon">
+                            <b>{ i } <span style="color: var(--yellow)"><i>v3</i></span> <span style="color: var(--lightblue)">────────────────</span></b> 
 
-                    <p class="arrow animate__animated animate__fadeInDown animate__delay-1s">
-                        ↓
-                    </p>
-                </div>
+                            <a href="https://discordapp.com/users/614954208139149319/" target="_blank" rel="noopener noreferrer">
+                                <img src="assets/logos/discord.svg">
+                            </a>
+                            <a href="https://steamcommunity.com/id/i9nn" target="_blank" rel="noopener noreferrer">
+                                <img src="assets/logos/steam.svg">
+                            </a>
+                        </p>
+
+                        <p class="arrow animate__animated animate__fadeInDown animate__delay-1s">↓</p>
+                    </div>
+                </header>
 
                 <div class="centered">
                     <h1><b>{ i9nn }</b></h1>
                     <h2><b>full stack + game dev.</b></h2>
 
-                    <a href="https://github.com/i9nn">
+                    <a href="https://github.com/i9nn" target="_blank" rel="noopener noreferrer">
                         check out my github!
                     </a>
                 </div>
+                
             </div>
         </div>
 
         <div class="textdesc">
             <div class="bg">
+
                 <div class="centered smile-upper">
                     <script>
                         const observer = new IntersectionObserver(entries => {
@@ -88,22 +89,33 @@ You can always message me on GitHub.
                         observer.observe(document.querySelector('.smile-upper'));
                     </script>
 
-                    <h1> <div class="animate__animated smile"><i class="bi bi-emoji-smile emoji"></i></div> <i>welcome!</i></h1>
+                    <h1><div class="animate__animated smile"><i class="bi bi-emoji-smile emoji"></i></div> <i>welcome!</i></h1>
                     <h2>my name is Ian. i am a web <br>& game developer located in NV.</h2>
                         <br>
                     <h3>i have been developing for around <i>five years</i> <br> in around <i>seven different languages.</i></h3>
+                        <br> 
 
-                    <div>
-                        <a href="https://www.lua.org/"><img src="assets/logos/lua.svg"></a>
-                        <a href="https://www.java.com/"><img src="assets/logos/java.svg"></a>
-                        <a href="https://en.wikipedia.org/wiki/HTML"><img src="assets/logos/html.svg"></a>
-                        <a href="https://en.wikipedia.org/wiki/CSS"><img src="assets/logos/css.svg"></a>
-                        <a href="https://www.kotlinlang.org"><img src="assets/logos/kotlin.svg"></a>
-                        <a href="https://www.python.org/"><img src="assets/logos/python.svg"></a>
-                        <a href="https://www.javascript.com/"><img src="assets/logos/js.svg"></a>
+                    <div id="logo-cont">
+                        <script>
+                            let imgs = ["lua", "java", "html", "css", "kotlin", "python", "js"];
+                            let links = ["https://www.lua.org/", "https://www.java.com/", "https://en.wikipedia.org/wiki/HTML", "https://en.wikipedia.org/wiki/CSS", "https://www.kotlinlang.org", "https://www.python.org/", "https://www.javascript.com/"];
+
+                            for (var i = 0; i < imgs.length; i++) {
+                                let item = document.createElement("a"); let img = document.createElement("img");
+
+                                item.href = links[i]; img.src = "assets/logos/" + imgs[i] + ".svg";
+                                item.target = "_blank"; item.rel = "noopener noreferrer";
+                                item.appendChild(img); 
+
+                                document.getElementById("logo-cont").appendChild(item); 
+                            }
+                        </script>
                     </div>
+
                 </div>
+
             </div>
         </div>
+
     </body>
 </html>
