--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@ You can always message me on GitHub.
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 		<script>
-			function generateIcons(iconMap, id) {
+			function generateIcons(iconMap, id, classToAdd) {
 				for (var ins in iconMap) {
 					// Instantialize new elements 
 					let item = document.createElement("a"); let img = document.createElement("img");
@@ -46,6 +46,10 @@ You can always message me on GitHub.
 					item.target = "_blank"; item.rel = "noopener noreferrer";
 					item.href = iconMap[ins]; img.src = "assets/logos/" + ins + ".svg";
 					item.appendChild(img); 
+
+                    if (classToAdd) {
+                        img.classList.add(classToAdd);
+                    }
 
 					// Add to logo container
 					document.getElementById(id).appendChild(item); 
@@ -85,8 +89,23 @@ You can always message me on GitHub.
             </div>
         </div>
 
-        <div class="textdesc">
-            
+        <div class="textdesc" id="textdesc">
+            <script>
+                for (var i = 0; i < 4; i++) {
+                    var corner = document.createElement("img");
+                    corner.src = "assets/backgrounds/textdesc-corner.svg"; corner.classList.add("corner"); 
+
+                    var degr = (i + 1) * 90; 
+                    corner.style.transform = "rotate(" + degr + "deg)";
+
+                    if (i < 2) { corner.style.top = 0; } else { corner.style.bottom = 0; }
+                    if (i == 0 || i == 3) { corner.style.left = 0; } else { corner.style.right = 0; }
+
+                    document.getElementById("textdesc").append(corner);
+                }
+            </script>
+
+
             <div class="bg">
                 <div class="centered smile-upper">
                     <script>
@@ -127,7 +146,7 @@ You can always message me on GitHub.
 								"js": "https://www.javascript.com/"
 							};
                             
-                            generateIcons(lgMap, "logo-cont"); 
+                            generateIcons(lgMap, "logo-cont", "logo"); 
                         </script>
                     </div>
 
