--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html>
     <head lang="en-US">
         <link rel="stylesheet" href="style.css">
-        <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
+        <title>i9nn</title>
+        <link rel="icon" type="image/x-icon" href="./images/favicon.ico">
     </head>
 
     <body>
