--- a/index.html
+++ b/index.html
@@ -10,16 +10,12 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
         <header>
-            <h1>i9nn</h1>
-            <!--
+            <h1>*i9nn</h1>
                 <div class="button-holder">
-                    
-                        <a href="stuff/about.html">ABOUT ME</a>
-                        <a>PROJECTS</a>
-                        <a>MUSIC</a>
-                
+                    <a href="stuff/about.html">ABOUT ME</a>
+                    <a href="stuff/projects.html">PROJECTS</a>
+                    <a target="_blank" rel="noopener noreferrer" href="https://discordapp.com/users/614954208139149319">DISCORD</a>
                 </div>
-            -->
         </header>
     </body>
 </html>
