--- a/stuff/about.html
+++ b/stuff/about.html
@@ -9,15 +9,19 @@
 
         <header class="about-me">
             <p>
-                i9nn and or ian is a Web Developer and Software Developer
+                i9nn and or ian is a Web Developer andSoftware Developer
                 from Nevada United States. He is devoted to creating abstract
-                yet sleek user interfaces. Ian is most experienced in HTML and 
-                CSS / SCSS manipulation, Java, Lua / Luau, JavaScript / TypeScript,
+                yet sleek user interfaces. Ian is most experienced in HTML and
+                CSS / <a href="https://sass-lang.com/" rel="noopener noreferrer" target="_blank">SCSS</a> manipulation, 
+                <a href="https://www.java.com/en/" rel="noopener noreferrer" target="_blank">Java</a>, 
+                <a href="https://www.lua.org/" rel="noopener noreferrer" target="_blank">Lua</a> / Luau, 
+                <a href="https://www.javascript.com/" rel="noopener noreferrer" target="_blank">JavaScript</a> / 
+                <a href="https://www.typescriptlang.org/" rel="noopener noreferrer" target="_blank">TypeScript</a>,
                 and is attempting to further their knowledge in each of these subjects
                 to push the boundaries of their creative vision.
             </p>
 
-            <a href="../index.html">/ back </a>
+            <a class="back" href="../index.html">/ back </a>
         </header>
     </body>
 </html>
