Added new background and removed file extensions from URLs

--- a/stuff/about.html
+++ b/stuff/about.html
@@ -21,7 +21,7 @@
                 to push the boundaries of their creative vision.
             </p>
 
-            <a class="back" href="../index.html">/ back </a>
+            <a class="back" href="../index">/ back </a>
         </header>
     </body>
 </html>
