--- a/stuff/about.html
+++ b/stuff/about.html
@@ -9,8 +9,8 @@
 
         <header class="about-me">
             <p>
-                i9nn and or ian is a Web Developer andSoftware Developer
-                from Nevada United States. He is devoted to creating abstract
+                i9nn is a web developer and software developer
+                from Nevada, United States. He is devoted to creating abstract
                 yet sleek user interfaces. Ian is most experienced in HTML and
                 CSS / <a href="https://sass-lang.com/" rel="noopener noreferrer" target="_blank">SCSS</a> manipulation, 
                 <a href="https://www.java.com/en/" rel="noopener noreferrer" target="_blank">Java</a>, 
@@ -19,10 +19,17 @@
                 <a href="https://www.typescriptlang.org/" rel="noopener noreferrer" target="_blank">TypeScript</a>,
                 and is attempting to further their knowledge in each of these subjects
                 to push the boundaries of their creative vision.
+                <br><br>
+                <span class="faded">
+                    > You can reach out to him using the Discord tab on the main page.
+                    <br>> Hover over a language to learn more about it.
+                </span>
             </p>
 
-            <a class="back" href="../index">/ back </a>
+            <a class="back" href="../index.html">/ back </a>
         </header>
+
+        <img class="waves" src="./images/waves.png">
     </body>
 </html>
 
