--- a/index.html
+++ b/index.html
@@ -9,14 +9,21 @@
     <body>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <header>
-            <h1>i9nn</h1>
+            <div id="title-container">
+                <h1 id="title">i9nn</h1>
+            </div>
+            <h2> software developer + <br>front-end developer + graphic designer </h2>
             <div class="button-holder">
-                <a href="stuff/about">ABOUT ME</a>
-                <a href="stuff/projects">PROJECTS</a>
+                <a href="stuff/about.html">ABOUT ME</a>
+                <a href="stuff/projects.html">PROJECTS</a>
                 <a target="_blank" rel="noopener noreferrer" href="https://discordapp.com/users/614954208139149319">DISCORD</a>
             </div>
         </header>
+
         <img class="background" src="./images/background.png">
+        <img class="waves blur" src="./images/waves.png">
+
+        <script src="index.js"></script>
     </body>
 </html>
 
