--- a/stuff/projects.html
+++ b/stuff/projects.html
@@ -12,7 +12,7 @@
                 ∞
             </p>
 
-            <a class="back" href="../index">/ back </a>
+            <a class="back" href="../index.html">/ back </a>
         </header>
     </body>
 </html>
