Small tweaks to CSS formatting + JS

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head lang="en-US">
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="./stylesheets/style.css">
         <title>i9nn</title>
         <link rel="icon" type="image/x-icon" href="./images/favicon.ico">
     </head>
@@ -12,7 +12,9 @@
             <div id="title-container">
                 <h1 id="title">i9nn</h1>
             </div>
+
             <h2> software developer + <br>front-end developer + graphic designer </h2>
+
             <div class="button-holder">
                 <a href="stuff/about.html">ABOUT ME</a>
                 <a href="stuff/projects.html">PROJECTS</a>
@@ -20,8 +22,8 @@
             </div>
         </header>
 
-        <img class="background" src="./images/background.png">
-        <img class="waves blur" src="./images/waves.png">
+        <img class="circle-bg" src="./images/background.png">
+        <img class="main-bg blur" src="./images/waves.png">
 
         <script src="index.js"></script>
     </body>
