--- a/stuff/projects.html
+++ b/stuff/projects.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head lang="en-US">
-        <link rel="stylesheet" href="../style.css">
+        <link rel="stylesheet" href="../stylesheets/style.css">
     </head>
 
     <body>
@@ -12,7 +12,8 @@
                 ∞
             </p>
 
-            <a class="back" href="../index.html">/ back </a>
+            <img class="main-bg" src="../images/aboutbackground.png">
+            <a class="back" href="../index.html"> back </a>
         </header>
     </body>
 </html>
