--- a/stuff/about.html
+++ b/stuff/about.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head lang="en-US">
-        <link rel="stylesheet" href="../style.css">
+        <link rel="stylesheet" href="../stylesheets/style.css">
     </head>
 
     <body>
@@ -9,27 +9,28 @@
 
         <header class="about-me">
             <p>
-                i9nn is a web developer and software developer
+                Ian is a web developer and software developer
                 from Nevada, United States. He is devoted to creating abstract
-                yet sleek user interfaces. Ian is most experienced in HTML and
-                CSS / <a href="https://sass-lang.com/" rel="noopener noreferrer" target="_blank">SCSS</a> manipulation, 
+                yet sleek user interfaces. Ian is most experienced in <a href="https://www.w3.org/TR/2011/WD-html5-20110405/" rel="noopener noreferrer">HTML</a> and
+                <a href="https://developer.mozilla.org/en-US/docs/Web/CSS" rel="noopener noreferrer">CSS</a> / <a href="https://sass-lang.com/" rel="noopener noreferrer" target="_blank">SCSS</a> manipulation, 
                 <a href="https://www.java.com/en/" rel="noopener noreferrer" target="_blank">Java</a>, 
-                <a href="https://www.lua.org/" rel="noopener noreferrer" target="_blank">Lua</a> / Luau, 
+                <a href="https://www.lua.org/" rel="noopener noreferrer" target="_blank">Lua</a> / <a href="https://luau-lang.org/" rel="noopener noreferrer">Luau</a>, 
                 <a href="https://www.javascript.com/" rel="noopener noreferrer" target="_blank">JavaScript</a> / 
                 <a href="https://www.typescriptlang.org/" rel="noopener noreferrer" target="_blank">TypeScript</a>,
                 and is attempting to further their knowledge in each of these subjects
                 to push the boundaries of their creative vision.
                 <br><br>
+
                 <span class="faded">
                     > You can reach out to him using the Discord tab on the main page.
                     <br>> Hover over a language to learn more about it.
                 </span>
             </p>
 
-            <a class="back" href="../index.html">/ back </a>
+            <a class="back" href="../index.html">back </a>
         </header>
 
-        <img class="waves" src="./images/waves.png">
+        <img class="main-bg" src="../images/aboutbackground.png">
     </body>
 </html>
 
